tests/errors/test_38.xpp
// No such enum

fn main() void {
	let x = What::bar;
}
